--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>404</title>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
     <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body class="page">
@@ -15,7 +15,9 @@
       <main class="main content__main">
         <div class="error main__error">
           <div class="code error__code">
-            <span class="code__item">4</span><span class="code__item code__item--center">0</span><span class="code__item">4</span>
+            <span class="code__item">4</span>
+            <span class="code__item code__item--center">0</span>
+            <span class="code__item">4</span>
           </div>
           <div class="message error__message">
             <h1 class="title message__title">Sorry! Page not found.</h1>
